tests/baselines/reference/moduleAugmentationNoNewNames.errors.txt
main.ts(5,9): error TS2454: Variable 'x' is used before being assigned.


==== map.ts (0 errors) ====
    import { Observable } from "./observable"
    
    (<any>Observable.prototype).map = function() { }
    
    declare module "./observable" {
        interface Observable<T> {
            map<U>(proj: (e:T) => U): Observable<U>
        }
        class Bar {}
        let y: number, z: string;
        let {a: x, b: x1}: {a: number, b: number};
        namespace Z {}
    }
    
==== observable.ts (0 errors) ====
    export declare class Observable<T> {
        filter(pred: (e:T) => boolean): Observable<T>;
    }
    
==== main.ts (1 errors) ====
    import { Observable } from "./observable"
    import "./map";
    
    let x: Observable<number>;
    let y = x.map(x => x + 1);
            ~
!!! error TS2454: Variable 'x' is used before being assigned.